--- a/TestCaseManager/index.html
+++ b/TestCaseManager/index.html
@@ -43,5 +43,6 @@
     <h2>Features</h2>
     <p>This section contains the features.</p>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
