--- a/TestCaseManager/testcases.html
+++ b/TestCaseManager/testcases.html
@@ -15,12 +15,12 @@
     </a>
   </div>
     <div class="hamburger-button">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+      <button class="navbar-toggler" id= "hamburger-button" type="button" data-toggle="collapse" data-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     </div>
-    <div class="collapse navbar-collapse justify-content-end d-none d-md-block" id="navbarCollapse">
+    <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link text-dark" href="index.html">Dashboard</a>
@@ -119,9 +119,9 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="assets/js/bootstrap.bundle.min.js"></script> -->
   <script src="assets/js/scenario.js"></script>
 
 </body>
