--- a/Camp/index.html
+++ b/Camp/index.html
@@ -12,25 +12,36 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-    <a class="navbar-brand text-white logo" href="#">
-      <img src="assets\images\BrookTrout.webp"" alt="Logo">
-    </a>
-    <div class="mx-auto text-center">
-      <h1 class="navbar-brand mb-0 title">Moosehead Lake Region</h1>
-    </div>
-    <div class="navbar-custom">
-      <ul class="navbar-nav">
-        <li class="nav-item active underline-on-hover">
-          <a class="nav-link text-white" href="https://www.zillow.com/homedetails/312-Hacker-Rd-Brunswick-ME-04011/84927238_zpid/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="https://destinationmooseheadlake.com/">Region</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="https://www.accuweather.com/en/us/lily-bay/04441/weather-forecast/2199889">Weather</a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+    <div class="container navbar-custom">
+      <div class="row w-100">
+        <div class="col-4 logo">
+            <a class="navbar-brand text-white logo" href="#">
+                <img src="assets\images\BrookTrout.webp"" alt="Logo">
+              </a>
+        </div>
+        <div class="col-4 text-center">
+          <h1 class="navbar-brand mb-0 title">Moosehead Lake Region</h1>
+        </div>
+        <div class="col-4 text-right">
+          <button class="navbar-toggler" id="hamburg"button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </div>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active underline-on-hover">
+              <a class="nav-link" href="https://www.zillow.com/homedetails/312-Hacker-Rd-Brunswick-ME-04011/84927238_zpid/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://destinationmooseheadlake.com/">Region</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.accuweather.com/en/us/lily-bay/04441/weather-forecast/2199889">Weather</a>
+            </li>
+          </ul>
+      </div>
     </div>
   </nav>
     <div class="container">
