--- a/phase1Project/tribute/index.html
+++ b/phase1Project/tribute/index.html
@@ -14,31 +14,88 @@
   </head>
   <body>
     <header>
-      <div id="title">A Tribute to the First Marine Division</div>
-      <figure id="img-container">
-        <img src="marines_title.jpg" alt="" id="title-image" />
-        <figcaption>Advancing in the other direction</figcaption>
-      </figure>
+      <nav class="navbar">
+        <div class="navbar-logo">
+          <img src="logo.jpg"" alt="Logo">
+        </div>
+        <div class="navbar-links">
+          <a href="#" class="navbar-link">Home</a>
+          <a href="#" class="navbar-link">About</a>
+        </div>
+      </nav>
     </header>
 
     <main id="main">
-      <section id="tribute-info">
-        <div id="main">
+      <div id="main">
+        <section>
+          <div class="title">
+            <div>
+              <h1>Eddie The Eagle</h1>
+              <img id="face-img" src="face.jpg" alt="Image 1" />
+            </div>
+          </div>
+        </section>
 
-        </div>
+        <section>
+          <div class="black"></div>
+        </section>
+        <section id="tribute-info">
+          <div class="picture-row">
+            <div class="picture pic1"></div>
+            <div class="picture pic2"></div>
+          </div>
+        </section>
 
-        <!-- stuff here -->
-      </section>
+        <section id="wins">
+          <div class="achievement-list">
+            <table class="achievement-table data">
+              <tbody>
+                <tr>
+                  <td>
+                    <strong>Jan 2022:</strong> Edwards' jump of 71 m at the Winter Olympics was then a British record (now 134.50 m held by Halifax-born Sam Bolton). His Olympic jump still puts him sixth on the all-time list of British ski jumpers.
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>Mar 2022:</strong> Edwards failed to qualify for the 1992 Winter Olympics in Albertville, France, or the 1994 Games in Lillehammer, Norway.
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>Jun 2022:</strong> On 13 February 2008, Edwards made a return visit to Calgary to take part in festivities marking the twentieth anniversary of the Games. 
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>Jun 2022:</strong> Eddie the eagle rule 'A rule that prevents a potential competitor from entering the Olympic Games unless they take part in an international event '
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer>
       <a href="" id="tribute-link"></a>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
-
