fix bullet list
fix bullet list

--- a/phase1Project/tribute/index.html
+++ b/phase1Project/tribute/index.html
@@ -46,7 +46,37 @@
           </div>
         </section>
 
-        <section id="wins">
+        <div class="row w-100">
+          <div class="col-4">
+          </div>
+          <div class="col-4">
+            <div class="merit-row">
+              <div class="merit"><p class="bullet">Jan 2022: Edwards' jump of 71 m at the Winter Olympics was then a British record (now 134.50 m held by Halifax-born Sam Bolton). His Olympic jump still puts him sixth on the all-time list of British ski jumpers.</p>
+              </div>
+              <div class="merit"><p class="bullet">Jan 2022: Eddie the eagle rule 'A rule that prevents a potential competitor from entering the Olympic Games unless they take part in an international event.</p>
+              </div>
+              <div class="merit"><p class="bullet">Jan 2022: Edwards failed to qualify for the 1992 Winter Olympics in Albertville, France, or the 1994 Games in Lillehammer, Norway.</p>
+              </div>
+              <div class="merit"><p class="bullet">Jan 2022: On 13 February 2008, Edwards made a return visit to Calgary to take part in festivities marking the twentieth anniversary of the Games.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+          </div>
+        </div>
+
+        <!-- <section id="tribute-merit">
+          <div class="merit-row">
+            <div class="merit"><p>Jan 2022: Edwards' jump of 71 m at the Winter Olympics was then a British record (now 134.50 m held by Halifax-born Sam Bolton). His Olympic jump still puts him sixth on the all-time list of British ski jumpers.</p>
+            </div>
+            <div class="merit"><p>Jan 2022: Edwards' jump of 71 m at the Winter Olympics was then a British record (now 134.50 m held by Halifax-born Sam Bolton). His Olympic jump still puts him sixth on the all-time list of British ski jumpers.</p>
+            </div>
+            <div class="merit"><p>Jan 2022: Edwards' jump of 71 m at the Winter Olympics was then a British record (now 134.50 m held by Halifax-born Sam Bolton). His Olympic jump still puts him sixth on the all-time list of British ski jumpers.</p>
+            </div>
+          </div>
+        </section> -->
+
+        <!-- <section id="wins">
           <div class="achievement-list">
             <table class="achievement-table data">
               <tbody>
@@ -73,7 +103,7 @@
               </tbody>
             </table>
           </div>
-        </section>
+        </section> -->
       </div>
     </main>
 
