--- a/phase1Project/companylanding/index.html
+++ b/phase1Project/companylanding/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/camp.css">
-  <title>Three Cards Page</title>
+  <title>Moosehead region page</title>
   <style>
   
 
@@ -51,7 +51,9 @@
             <img src="assets\images\FishingSunset.jpg" class="card-img-top" alt="Image 1">
             <div class="card-body">
               <h5 class="card-title">Sunset Fishing</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.dfsdfsdfsdfsdfsdfdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsds</p>
+              <p class="card-text">The Moosehead Lake Region is a fisherman’s paradise with over 74,890 acres of cool, clear water in one lake plus several famous rivers and many lakes, ponds, streams and brooks in the immediate area.
+
+                The summer season opens April 1 and closes September 30. Ask an old Maine Guide when the best time to fish is and he’ll probably tell you “trolling is usually best May, June, September; stream fishing July, Aug; fly fishing ponds May, June, and fly fishing rivers May, June, Sept”. So whether your specialty is fly fishing, trolling, or spinning, you will find memorable fishing throughout the season.</p>
             </div>
           </div>
         </div>
@@ -60,7 +62,7 @@
             <img src="assets\images\fish.jpg" class="card-img-top" alt="Image 2">
             <div class="card-body">
               <h5 class="card-title">Landlocked Salmon Fishing</h5>
-              <p class="card-text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p class="card-text">Get ready to reel in tonight’s dinner! Moosehead Lake, the centerpiece of our region, is nearly forty miles long and twelve miles wide and covers 75,000 acres with breathtaking scenery of undeveloped shoreline and mountains.  The biggest Maine lake naturally houses the biggest Maine fish! Spring fishing on Moosehead Lake can produce catches that inspire legendary stories. Mount Kineo rises over 1,798 feet straight above the surface of the lake. There are endless opportunities for every big lake fishermen. Moosehead Lake is famous for its landlocked salmon, brook trout, and lake trout fishery. Smallmouth bass in the Lily Bay and Spencer Bay areas provide good shallow water fishing for the whole family throughout the summer months.</p>
             </div>
           </div>
         </div>
@@ -69,12 +71,12 @@
             <img src="assets\images\flowers.jpg" class="card-img-top" alt="Image 3">
             <div class="card-body">
               <h5 class="card-title">Lupines</h5>
-              <p class="card-text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="card-text">To visitors and Mainers, common or big leaf lupine (Lupinus polyphyllus) is one of our most iconic wild plants. Often spotted throughout Maine along roadsides, in wild areas, and in books and paintings.</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="row flex-row custom-slideshow"> -->
+      <div class="row flex-row custom-slideshow"> 
       <div class="col-md-2" >
       </div>
         <div class="col-lg-8 row2">
@@ -84,7 +86,7 @@
                 <img src="assets\images\flowers.jpg" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="assets\images\fish.jpg" class="d-block w-100">
+                <img src="assets\images\icefishing.jpg" class="d-block w-100">
               </div>
               <div class="carousel-item">
                 <img src="assets\images\cliff.jpg" class="d-block w-100">
